app/mvip-manager/src/pages/shop/[id]/module-management/components/content/components/components/select-item/components/target-component/components/content-item/index.less
.content-container {
  &.product {
    width: 150px;
    margin: 0 24px 24px 0;
    background: #ffffff;
    border: 1px solid #d9d9d9;
    .content {
      .img-box {
        height: 116px;
        position: relative;
        .select-box {
          display: inline-block;
          min-width: 16px;
          height: 16px;
          padding: 0 4px;
          position: absolute;
          left: 8px;
          top: 8px;
          line-height: 14px;
          background: #ffffff;
          border-radius: 2px;
          border: 1px solid #d9d9d9;
          font-size: 12px;
          z-index: 1000;
          cursor: pointer;
          &.selected {
            border-color: #096dd9;
            background: #096dd9;
            color: #fff;
          }
        }
        .mask {
          width: 100%;
          height: 100%;
          position: absolute;
          top: 0;
          left: 0;
          z-index: 10;
          background-color: rgba(0, 0, 0, 0.44);
          cursor: pointer;
        }
        .delete {
          width: 40px;
          height: 24px;
          position: absolute;
          bottom: 0;
          right: 0;
          z-index: 1000;
          cursor: pointer;
        }
        .status {
          width: 100%;
          height: 100%;
          display: flex;
          justify-content: center;
          flex-direction: column;
          align-items: center;
          position: absolute;
          top: 0;
          left: 0;
          z-index: 100;
          color: #fff;
          padding: 0 20px;
          overflow: hidden;
          .title {
            font-size: 14px;
          }
          .memo {
            font-size: 12px;
          }
        }
      }
      .img {
        width: 100%;
        height: 100%;
      }
      .text-box {
        padding: 4px 9px;
        .name {
          height: 54px;
          font-size: 12px;
          line-height: 18px;
          color: #333333;
          overflow: hidden;
          text-overflow: ellipsis;
          display: -webkit-box;
          -webkit-line-clamp: 3;
          -webkit-box-orient: vertical;
        }
        .price {
          font-size: 12px;
          color: #333333;
        }
      }
    }
  }
  &.article {
    background: #ffffff;
    border: 1px solid #d9d9d9;
    margin-bottom: 24px;
    .content {
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding: 8px 13px;
    }
    .select-box {
      min-width: 16px;
      height: 16px;
      padding: 0 4px;
      line-height: 14px;
      background: #ffffff;
      border-radius: 2px;
      border: 1px solid #d9d9d9;
      font-size: 12px;
      cursor: pointer;
      &.selected {
        border-color: #096dd9;
        background: #096dd9;
        color: #fff;
      }
    }
    .delete {
      width: 30px;
      color: #096dd9;
      cursor: pointer;
    }
    .name {
      flex: 1;
      max-width: calc(100% - 180px);
      overflow: hidden;
      text-overflow: ellipsis;
      display: -webkit-box;
      -webkit-line-clamp: 1;
      -webkit-box-orient: vertical;
      font-size: 14px;
      color: #333333;
    }
    .time {
      width: 90px;
      margin-right: 40px;
      font-size: 14px;
      color: #999999;
    }
    .status {
      padding: 0px 13px 8px;
      color: #ff2e44;
    }
  }
}

